# docs/api/openapi.yml
@@ -57,9 +57,15 @@ paths:
               schema:
                 $ref: "#/components/schemas/Error"
 
-  /accounts:
+  /ledgers/{ledgerId}/accounts:
     post:
       parameters:
+        - name: ledgerId
+          in: path
+          required: true
+          schema:
+            type: string
+            format: uuid
         - name: Idempotency-Key
           in: header
           required: true
@@ -85,8 +91,14 @@ paths:
               schema:
                 $ref: "#/components/schemas/Error"
 
-  /accounts/{accountId}:
+  /ledgers/{ledgerId}/accounts/{accountId}:
     parameters:
+      - name: ledgerId
+        in: path
+        required: true
+        schema:
+          type: string
+          format: uuid
       - name: accountId
         in: path
         required: true
@@ -141,18 +153,17 @@ components:
     CreateAccountRequest:
       type: object
       required:
-        - ledgerId
         - name
         - currency
+        - overdraftAllowed
         - metadata
       properties:
-        ledgerId:
-          type: string
-          format: uuid
         name:
           type: string
         currency:
           $ref: "#/components/schemas/Currency"
+        overdraftAllowed:
+          type: boolean
         metadata:
           type: object
           description: Arbitrary metadata to include in account
@@ -164,6 +175,9 @@ components:
         - ledgerId
         - name
         - currency
+        - balance
+        - availableBalance
+        - overdraftAllowed
         - metadata
         - status
       properties:
@@ -177,6 +191,14 @@ components:
           type: string
         currency:
           $ref: "#/components/schemas/Currency"
+        balance:
+          type: integer
+          format: int64
+        availableBalance:
+          type: integer
+          format: int64
+        overdraftAllowed:
+          type: boolean
         metadata:
           type: object
           description: Arbitrary metadata to include in account
@@ -186,9 +208,9 @@ components:
     AccountStatus:
       type: string
       enum:
-        - active
-        - frozen
-        - blocked
+        - ACTIVE
+        - FROZEN
+        - BLOCKED
 
     Currency:
       type: string
