# internal/account/model.go
@@ -4,30 +4,25 @@ import (
 	"encoding/json"
 
 	"github.com/google/uuid"
+	"github.com/nocmok/go-ledger/internal/currency"
 )
 
 type Status string
 
 const (
-	StatusActive  Status = "active"
-	StatusFrozen  Status = "frozen"
-	StatusBlocked Status = "blocked"
-)
-
-type Currency string
-
-const (
-	CurrencyUSD Currency = "USD"
-	CurrencyEUR Currency = "EUR"
-	CurrencyBTC Currency = "BTC"
-	CurrencyETH Currency = "ETH"
+	StatusActive  Status = "ACTIVE"
+	StatusFrozen  Status = "FROZEN"
+	StatusBlocked Status = "BLOCKED"
 )
 
 type Account struct {
-	ID       uuid.UUID       `json:"id"`
-	LedgerID uuid.UUID       `json:"ledgerId"`
-	Name     string          `json:"name"`
-	Currency Currency        `json:"currency"`
-	Metadata json.RawMessage `json:"metadata"`
-	Status   Status          `json:"status"`
+	ID               uuid.UUID         `json:"id"`
+	LedgerID         uuid.UUID         `json:"ledgerId"`
+	Name             string            `json:"name"`
+	Currency         currency.Currency `json:"currency"`
+	Balance          int64             `json:"balance"`
+	AvailableBalance int64             `json:"availableBalance"`
+	OverdraftAllowed bool              `json:"overdraftAllowed"`
+	Metadata         json.RawMessage   `json:"metadata"`
+	Status           Status            `json:"status"`
 }
